# magrathea

./: .gitignore  ACSCMotionHandler.cpp  ACSCMotionHandler.h  AerotechMotionHandler.cpp  AerotechMotionHandler.h  CMakeLists.txt  CameraView.cpp  CameraView.h  EC-sensor-fiducials.csv  Fiducial_finder.cpp  Fiducial_finder.h  Magrathea.pro  MatrixTransform.cc  MatrixTransform.h  MotionHandler.cpp  MotionHandler.h  PetalCoordinates.cc  PetalCoordinates.h  Point.cc  Point.h  QPetalLocator.cpp  QPetalLocator.h  README.md  StreamViewer.cc  StreamViewer.h  alglibtools.cc  alglibtools.h  calibrator.cpp  calibrator.h  fiducial_locations.cpp  fiducial_locations.h  flatness.cc  flatness.h  focus_finder.cpp  focus_finder.h  logger.cc  logger.h  magrathea.cpp  magrathea.h  magrathea.ui  (+10 more)
ACSC/C_CPP/: ACSCL_x86.LIB
QJoysticks-master/src/: QJoysticks.cpp
QJoysticks-master/src/QJoysticks/: SDL_Joysticks.cpp
alglib-3.12.0/cpp/: manual.cpp.html
alglib-3.12.0/cpp/tests/: test_c.cpp
alglib-3.14.0/cpp/src/: dummy.txt
mvIMPACT_CPP/: mvIMPACT_acquire.h  mvIMPACT_acquire_GenICam.h  mvIMPACT_acquire_GenICam_CustomCommands.h  versionInfo.txt
xlnt/source/detail/serialization/: custom_value_traits.cpp
